--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,9 +1,13 @@
 :root {
-  --color-black: rgb(39, 38, 38);
+  --color-black: rgb(31, 23, 23);
   --color-white: rgb(204, 204, 204);
+  --color-gray: rgb(128, 128, 128);
   --background-color: white;
   --padding: 16px;
   --font-size-small: 14px;
-  --color-accent: rgb(219, 216, 200);
-  --one-block: calc((100vh - 275px) / 3);
+  --color-accent: rgb(238, 234, 210);
+  --color-accent2: rgb(252, 255, 228);
+  --one-block: calc((100vh - 320px) / 3);
 }
+
+$tablet: 920px;
