--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,14 +1,24 @@
-<h1 class="site-title">{{ site.title }}</h1>
+<h1 class="site-title">
+  <a href="/">
+    <img alt="icon" src="/assets/icon.svg">{{ site.title }}
+  </a>
+</h1>
 
 <button class="menu-toggle"></button>
+
+<div class="menu">
+  {% for menu_item in menu_items %}
+    <a class="menu-item" for="{{ menu_item.slug }}" style="--index: {{ forloop.index }};" data-text="{{ menu_item.title }}" href="{% if menu_item.link %}{{ menu_item.link }}{% else %}/#{{ menu_item.slug }}{% endif %}">
+      <span>{{ menu_item.title }}</span>
+    </a>
+  {% endfor %}
+
+  <a class="button small" href="tel:{{ site.phone }}"><strong>Tel:</strong>&nbsp;{{ site.phone }}</a>
+  <a class="button small" href="mailto:{{ site.email }}"><strong>Email:</strong>&nbsp;{{ site.email }}</a>
+  
+</div>
 
 <div class="site-title-shadow"></div>
 
 <div class="site-slogan">{{ site.slogan | markdownify }}</div>
 
-
-<div class="menu">
-  {% for menu_item in menu_items %}
-    <a class="menu-item" style="--index: {{ forloop.index }};" href="#{{ menu_item.slug }}">{{ menu_item.title }}</a>
-  {% endfor %}
-</div>
