--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -15,6 +15,35 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'Merriweather', serif;
 }
 
-p {
+* {
   line-height: 1.5;
+}
+
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+h2 {
+  font-style: italic;
+}
+
+body > .inner {
+  padding: var(--padding);
+
+  > .title {
+    margin-bottom: 26px;
+    clear: both;
+  }
+}
+
+body {
+  overflow-x: hidden;
+  max-width: 1280px;
+  margin-inline: auto;
+}
+
+ul {
+  padding-left: 12px;
 }
