--- a/_sass/blocks/_lab.scss
+++ b/_sass/blocks/_lab.scss
@@ -1,6 +1,17 @@
 .block.lab {
   padding-inline: 0;
 
+  .background {
+    position: absolute;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    opacity: 1;
+    z-index: -1;
+  }
+
   > .title {
     padding-inline: var(--padding);
   }
@@ -8,9 +19,14 @@
   .inner {
     display: flex;
     gap: 20px;
+    position: relative;
     width: 100vw;
     padding-inline: var(--padding);
     overflow-x: auto;
+    scrollbar-width: none;
+    &::-webkit-scrollbar {
+      display: none;
+    }  
   }
 
   .description {
@@ -19,6 +35,18 @@
 
     p {
       margin: 0;
+    }
+  }
+}
+
+@media screen and (min-width: $tablet) {
+  .block.lab {
+    .inner {
+      width: 100%;
+    }
+
+    .description {
+      max-width: 500px;
     }
   }
 }
