--- a/_sass/blocks/_showcases.scss
+++ b/_sass/blocks/_showcases.scss
@@ -1,25 +1,56 @@
-.block.showcases {
-  overflow-x: auto;
-  width: 100vw;
-  margin-top: 20px;
-  margin-bottom: 60px;
+.block.showcases {  
+  &::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
 
   > .title {
     display: none;
   }
 
-  .goto-showcases {
-    position: absolute;
-    right: var(--padding);
-    z-index: 10;
-    margin-top: 22px;
+  .show-more-showcases {
+    float: right;
+    margin-top: var(--padding);
+
+    &:not(.js) {
+      display: none;
+    }
+
+    .expanded {
+      opacity: 0;
+      position: absolute;
+    }
+  }
+
+  .more-showcases {
+    display: grid;
+    grid-template-columns: repeat(2, calc(100vw / 2 - 20px));
+    grid-template-rows: calc(100vw / 2 - 20px);
+    gap: 10px;
+    overflow: hidden;
+    max-height: 0;
+  }
+
+  .showcase.more {
+    display: none;
   }
 
   .inner {
+    overflow-x: auto;
+    width: 100vw;
+    margin-left: -16px;
+    padding-left: var(--padding);
     display: grid;
-    grid-template-columns: repeat(7, 40vw);
+    grid-template-columns: repeat(4, 40vw);
+    grid-auto-columns: auto;
+    grid-auto-flow: column;
     grid-template-rows: repeat(3, var(--one-block));
     gap: 10px;
+    scrollbar-width: none;
+    &::-webkit-scrollbar {
+      display: none;
+    }
 
     .pad {
       width: var(--padding);
@@ -45,17 +76,117 @@
 
     .showcase:nth-child(5) {
       grid-column-start: 3;
-      grid-column-end: 5;
+      grid-column-end: 4;
       grid-row-start: 3;
       grid-row-end: 4;
     }
 
     .showcase:nth-child(6) {
-      grid-column-start: 5;
-      grid-column-end: 8;
-      grid-row-start: 1;
+      grid-column-start: 4;
+      grid-column-end: 5;
+      grid-row-start: 3;
       grid-row-end: 4;
     }
+  }
+}
 
+.has-more-showcases .block.showcases {
+  .show-more-showcases {
+    .expanded {
+      opacity: 1;
+      position: relative;
+    }
+
+    .collapsed {
+      opacity: 0;
+      position: absolute;
+    }
+  }
+
+  .showcase.more {
+    display: block;
+    width: 40vw;
+  }
+}
+
+@media screen and (min-width: $tablet) {
+  .block.showcases {
+    scroll-margin: 60px;
+
+    .inner {
+      width: 100%;
+      margin-left: 0;
+      padding-left: 0;
+      grid-template-columns: repeat(4, 1fr);
+      grid-template-rows: repeat(3, 1fr);  
+      grid-auto-flow: row;
+      align-items: stretch;
+      max-height: none;
+      height: auto;
+
+      .showcase.more {
+        display: block;
+        width: auto;
+        grid-column: span 1;
+        grid-row: span 1;
+        max-height: 0;
+        display: none;
+        transition: opacity .3s ease-in-out, max-height .2s .3s;
+        overflow: hidden;
+      }
+
+      .showcase:nth-child(1),
+      .showcase:nth-child(2),
+      .showcase:nth-child(3),
+      .showcase:nth-child(4),
+      .showcase:nth-child(6) {
+        aspect-ratio: 1.4 / 1;
+      }
+  
+      .showcase:nth-child(5) {
+        aspect-ratio: 2 / 1;
+      } 
+
+
+      .pad {
+        display: block;
+        grid-row-start: none;
+        grid-row-end: none;
+        margin-left: 0;
+        background-color: var(--color-accent);
+        opacity: .4;
+        grid-column: span var(--span);
+        grid-row: span 1;
+        width: auto;
+        height: 300px;
+        transition: max-height .3s;
+        display: none;
+        max-height: 0;
+      }
+    }
+  }
+
+  .has-more-showcases {
+    .block.showcases {
+      .inner {
+        .pad,
+        .showcase.more {
+          max-height: 300px;
+          transition: max-height .3s;
+          position: relative;
+        }
+      }
+    }
+  }
+
+  .has-more-showcases-transition {
+    .block.showcases {
+      .inner {
+        .pad,
+        .showcase.more {
+          display: block;
+        }
+      }
+    }
   }
 }
