--- a/_sass/blocks/_why.scss
+++ b/_sass/blocks/_why.scss
@@ -1,6 +1,123 @@
 .block.why {
-  .show-all-faqs {
-    margin-top: 20px;
-    float: right;
+  padding-bottom: 32px;
+
+  > .inner {
+    position: relative;
+
+    &:before {
+      transition: opacity .3s ease-in-out;
+      content: '';
+      display: block;
+      width: 100%;
+      z-index: 2;
+      pointer-events: none;
+      height: 120px;
+      background: linear-gradient(0deg, rgb(255, 255, 255) 0%, rgba(255, 255, 255, 0) 100%); 
+      position: absolute;
+      bottom: 0;
+      opacity: 1;
+    }
+  }
+
+  .button {
+    position: relative;
+    
+    span {
+      transition: opacity .3s ease-in-out;
+    }
+  }
+}
+
+body:not(.has-all-faqs-visible) {
+  .show-all-faqs .expanded {
+    opacity: 0;
+    position: absolute;
+    left: 22px;
+  }
+
+  .faq.js:nth-child(4) ~ .faq.js,
+  .faq.js:nth-child(4) ~ .faq.js + .faq.js {
+    max-height: 0;
+    margin-bottom: -20px;
+  }
+}
+
+body.has-all-faqs-visible {
+  .show-all-faqs .collapsed {
+    opacity: 0;
+    position: absolute;
+    left: 22px;
+  }
+
+  .block.why > .inner:before {
+    opacity: 0;
+    pointer-events: none;
+  }  
+}
+
+.show-all-faqs {
+  margin-top: 20px;
+  float: right;
+  clear: both;
+
+  &:not(.js) {
+    display: none;
+  }
+}
+
+@media screen and (min-width: $tablet) {
+  .block.why {
+    &:before {
+      background-color: var(--color-gray);
+      opacity: .1;
+      content: '';
+      display: block;
+      width: calc(50% - 49px);
+      height: calc(100% - 225px);
+      border-radius: 20px;
+      position: absolute;
+      top: 132px;
+    }
+
+    .faq {
+      width: calc(50% - 6px);
+      float: right;
+      clear: both;
+
+      img {
+        display: none;
+        margin: 0;
+      }
+
+      &.open {
+        img {
+          display: block;
+          // border-radius: 20px;
+          object-fit: cover;
+          position: absolute;
+          right: calc(50% + 33px);
+          top: 0;
+          margin-left: 0;
+          width: calc(50% - 33px);
+          height: 100%;
+        }  
+      }
+
+    }
+
+    .inner {
+      &:before {
+        width: 50%;
+        right: 0;
+        left: auto;
+      }
+
+      &:after {
+        content: "";
+        clear: both;
+        display: table;
+      }
+    }
+    
   }
 }
