--- a/_sass/components/_experiment.teaser.scss
+++ b/_sass/components/_experiment.teaser.scss
@@ -2,10 +2,6 @@
   position: relative;
   flex: 0 0 60vw;
 
-  img {
-    border-radius: 10px;
-  }
-
   .title {
     text-align: center;
     position: absolute;
@@ -18,5 +14,19 @@
     background-color: rgba(255, 255, 255, .8);
     color: var(--color-black);
     padding: 8px;
+  }
+
+  img {
+    width: 100%;
+    height: 100%;
+    max-height: 300px;
+    object-fit: cover;
+  }
+}
+
+
+@media screen and (min-width: $tablet) {
+  .experiment.teaser {
+    flex: 1 1 auto;
   }
 }
