--- a/_sass/components/_faq.teaser.scss
+++ b/_sass/components/_faq.teaser.scss
@@ -1,7 +1,15 @@
 .faq.teaser {
-  
+  appearance: none;
+  overflow: hidden;
+  max-height: var(--all-height);
+
+  &.loaded {
+    transition: max-height .3s .3s ease-in-out, margin .3s .3s ease-in-out, opacity .3s ease-in-out;
+  }
+
   summary {
     list-style: none;
+    pointer-events: none;
   }
 
   summary::-webkit-details-marker {
@@ -9,42 +17,86 @@
   }
   
   .title {
+    pointer-events: all;
     cursor: pointer;
     padding: 10px 18px;
     display: inline-flex;
     width: 100%;
     background-color: var(--color-accent);
     border-radius: 20px;
+    position: relative;
+    padding-right: 40px;
 
     &::after {
+      height: 16px;
+      width: 16px;
+      line-height: 16px;
+      text-align: center;
       float: left;
+      transform-origin: center;
       margin-left: auto;
       content: '›';
-      transition: all .3s ease-in-out;
+      transition: all .2s .2s ease-in-out;
       transform: translateY(-1px) rotate(0deg);
+      position: absolute;
+      right: 16px;
+      top: calc(50% - 8px);
     }
+  }
+
+  &.loaded .title {
+    transition: all .2s .3s ease-in-out;
   }
 
   .answer {
     background-color: var(--color-accent); 
-    padding: 10px 18px;
     overflow: hidden;
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
+
+    > .inner {
+      padding: 10px 18px;
+      border-top: 1px dashed rgb(161, 161, 161);
+    }
+  }
+
+  &.loaded .answer {
+    transition: all .2s .2s ease-in-out;
   }
 
 
   img {
-    width: 100%;
-    display: none;
+    display: block;
+    width: 100px;
+    height: 100px;
+    float: right;
+    margin: -10px -18px 0 18px;
   }
 
-  &[open] {
+  &:not([open]),
+  &.js:not(.open) {
+    .answer {
+      max-height: 0; 
+    }
+
+    .title {
+      border-bottom-left-radius: 20px;
+      border-bottom-right-radius: 20px; 
+      font-weight: normal;
+
+      &::after {
+        transform: translateY(-1px) rotate(0deg);
+      }
+    }
+  }
+
+  &.open,
+  &:not(.js)[open] {
     .title {
       font-weight: bold;
       border-bottom-left-radius: 0;
       border-bottom-right-radius: 0;
-      border-bottom: 1px dashed white;
+      transition: all .2s 0s ease-in-out;
 
       &::after {
         transform: translateY(-1px) rotate(90deg);
@@ -52,16 +104,11 @@
     }
 
     .answer {
-      animation: slide 2s forwards;
+      max-height: var(--height);
     }
   }
 }
 
 .faq.teaser + .faq.teaser {
   margin-top: 20px;
-}
-
-@keyframes slide {
-  0% { max-height: 0; }
-  100% { max-height: 100vh; }
 }
