a bit of styling added

--- a/_sass/blocks/_lab.scss
+++ b/_sass/blocks/_lab.scss
@@ -23,6 +23,8 @@
     width: 100vw;
     padding-inline: var(--padding);
     overflow-x: auto;
+    overflow-y: hidden;
+
     scrollbar-width: none;
     &::-webkit-scrollbar {
       display: none;
