--- a/_sass/components/_site-slogan.scss
+++ b/_sass/components/_site-slogan.scss
@@ -7,6 +7,7 @@
   background-color: var(--background-color);
   margin-bottom: 20px;
   color: var(--color-gray);
+  padding-top: 10px;
 
   p {
     margin: 0;
