--- a/_sass/components/_site-title.scss
+++ b/_sass/components/_site-title.scss
@@ -3,7 +3,8 @@
   top: 0;
   line-height: 1.25;
   z-index: 100;  
-  padding: var(--padding);
+  padding-inline: var(--padding);
+  padding-block: 5px;
   background-color: var(--background-color);
 
   a {
@@ -24,7 +25,7 @@
   background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(9,9,121,0.5284314409357493) 35%, rgba(0,212,255,0) 100%); 
   position: sticky;
   width: 100vw;
-  top: 80px;
+  top: 58px;
   margin-left: 50%;
   transform: translateX(-50vw);
   opacity: .2;
@@ -38,7 +39,6 @@
     margin-right: -100%;
     z-index: 10;
     position: fixed;
-    padding-block: 5px;
   }
 
   .site-title-shadow {
