--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,13 +2,24 @@
 {% assign sorted_blocks = site.blocks | sort: 'weight' %}
 
 <!DOCTYPE html>
-<html lang="en" style="--color-accent: {{ site.accent }};">
+<html lang="en" style="
+
+--color-accent: {{ site.color_accent }};
+--color-black: {{ site.color_dark }};
+--color-white: {{ site.color_light }};
+
+">
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Leemsmid | {{ site.slogan | markdownify | strip_html }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
+    <script type="application/json" id="env">
+      {
+        "instagram_feed": "{{ site.instagram_feed }}"
+      }
+    </script>
   </head>
   <body>
 
@@ -18,6 +29,7 @@
 
     <script src="/scripts/why.js"></script>
     <script src="/scripts/menu.js"></script>
+    <script src="/scripts/lab.js"></script>
     <script type="module" src="/scripts/showcases.js"></script>
   </body>
 </html>
