--- a/_sass/blocks/_block.scss
+++ b/_sass/blocks/_block.scss
@@ -17,6 +17,22 @@
     clear: both;
     display: table;
   }
+
+  &.background {
+    &::before {
+      background-color: var(--color-accent);
+      content: '';
+      display: block;
+      width: 100vw;
+      height: 100%;
+      position: absolute;
+      opacity: .3;
+      z-index: -1;
+      top: -0px;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+  }
 }
 
 .block + .block {
