--- a/_sass/blocks/_showcases.scss
+++ b/_sass/blocks/_showcases.scss
@@ -21,6 +21,8 @@
       opacity: 0;
       position: absolute;
     }
+
+    display: none;
   }
 
   .more-showcases {
@@ -87,6 +89,11 @@
       grid-row-start: 3;
       grid-row-end: 4;
     }
+
+    .showcase.more {
+      display: block;
+      width: 40vw;
+    }
   }
 }
 
@@ -103,15 +110,15 @@
     }
   }
 
-  .showcase.more {
-    display: block;
-    width: 40vw;
-  }
 }
 
 @media screen and (min-width: $tablet) {
   .block.showcases {
     scroll-margin: 60px;
+
+    .show-more-showcases {
+      display: block;
+    }
 
     .inner {
       width: 100%;
